--- a/app/src/main/res/layout/fragment_birth_of_kks.xml
+++ b/app/src/main/res/layout/fragment_birth_of_kks.xml
@@ -5,10 +5,87 @@
     tools:context="in.co.officevcan.stg1.ovkksapp.BirthOfKksFragment">
 
     <!-- TODO: Update blank fragment layout -->
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/shape_linear_border"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp">
 
-   <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="Hello kks birth"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/birth_kks_icon"
+            android:id="@+id/imgbirth"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="20dp"/>
+
+        <com.rey.material.widget.TextView
+            android:id="@+id/tvbirthday"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginTop="5dp"
+            android:text="Happy Birthday"
+            android:textColor="@color/Colornavheader"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center"></com.rey.material.widget.TextView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <com.rey.material.widget.TextView
+                android:id="@+id/tvna"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="5dp"
+                android:text="Name:"
+                android:textColor="@color/colorName"
+                android:textSize="20sp"
+                android:textStyle="bold"></com.rey.material.widget.TextView>
+            <com.rey.material.widget.TextView
+                android:id="@+id/tvname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="5dp"
+                android:text="Kiran r Vyas"
+                android:textColor="@color/colorName"
+                android:textSize="20sp"
+                android:textStyle="bold"></com.rey.material.widget.TextView>
+        </LinearLayout>
+        <com.rey.material.widget.TextView
+            android:id="@+id/tvwish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginTop="5dp"
+            android:text="Many Many Happy Returns Of The Day"
+            android:textColor="@color/colorName"
+            android:textSize="20sp"
+            android:textStyle="bold"></com.rey.material.widget.TextView>
+
+    </LinearLayout>
+</ScrollView>
 
 </LinearLayout>
