--- a/app/src/main/res/layout/fragment_birth_of_kks.xml
+++ b/app/src/main/res/layout/fragment_birth_of_kks.xml
@@ -7,7 +7,7 @@
     <!-- TODO: Update blank fragment layout -->
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -45,7 +45,7 @@
             android:gravity="center"></com.rey.material.widget.TextView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
             <com.rey.material.widget.TextView
                 android:id="@+id/tvna"
