--- a/app/src/main/res/layout/fragment_birth_of_kks.xml
+++ b/app/src/main/res/layout/fragment_birth_of_kks.xml
@@ -10,7 +10,7 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/shape_linear_border"
         android:layout_marginLeft="40dp"
