--- a/app/src/main/res/layout/fragment_birth_of_kks.xml
+++ b/app/src/main/res/layout/fragment_birth_of_kks.xml
@@ -45,7 +45,7 @@
             android:gravity="center"></com.rey.material.widget.TextView>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
             <com.rey.material.widget.TextView
                 android:id="@+id/tvna"
