--- a/app/src/main/res/layout/raw_blood_donar.xml
+++ b/app/src/main/res/layout/raw_blood_donar.xml
@@ -17,10 +17,10 @@
         card_view:cardCornerRadius="4dp"
         card_view:elevation="10dp">
 
-        <HorizontalScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,6 +42,12 @@
                     android:textStyle="normal">
 
                 </com.rey.material.widget.TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgBloodIcon"
@@ -66,6 +72,11 @@
 
                 </com.rey.material.widget.TextView>
 
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/imgContactIcon"
                     android:layout_width="wrap_content"
@@ -104,9 +115,8 @@
 
 
             </LinearLayout>
-        </HorizontalScrollView>
 
-
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
