--- a/app/src/main/res/layout/fragment_about_us_tab_layout.xml
+++ b/app/src/main/res/layout/fragment_about_us_tab_layout.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="in.co.officevcan.stg1.ovkksapp.AboutUsTabLayoutFragment">
 
@@ -10,20 +10,16 @@
         android:id="@+id/AboutUsTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/tool_bar"
         android:background="@color/colorSplash"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/colorIndicater"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/colorWhite"
-        app:tabTextColor="@color/colorWhite"></android.support.design.widget.TabLayout>
+        app:tabTextColor="@color/colorWhite" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/AboutUsTabLayout" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
