--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,121 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/mainlin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/mainlin">
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/LayoutToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/mylin1">
+        android:orientation="vertical">
+
         <include
             android:id="@+id/app_bar"
-            layout="@layout/app_bar"/>
+            layout="@layout/app_bar" />
     </LinearLayout>
 
 
-  <!--  <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/mylin2">
+    <!--  <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:layout_marginBottom="10dp"
+          android:id="@+id/mylin2">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loginpage_icon"
-            android:id="@+id/mainlogoimg"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"/>
-    </LinearLayout>-->
+          <ImageView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:src="@drawable/loginpage_icon"
+              android:id="@+id/mainlogoimg"
+              android:layout_gravity="center_horizontal|center_vertical"
+              android:layout_marginTop="25dp"
+              android:layout_marginLeft="10dp"
+              android:layout_marginRight="10dp"
+              android:layout_marginBottom="5dp"/>
+      </LinearLayout>-->
 
     <ScrollView
+        android:id="@+id/scroll1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scroll1">
+        android:layout_height="match_parent">
+
         <LinearLayout
+            android:id="@+id/ParentLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/linscroll"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
+
             <LinearLayout
+                android:id="@+id/ChildLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:id="@+id/mylin3">
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
                 <ImageView
+                    android:id="@+id/mainlogoimg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/loginpage_icon"
-                    android:id="@+id/mainlogoimg"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="5dp"/>
+                    android:layout_marginTop="25dp"
+                    android:src="@drawable/loginpage_icon" />
 
                 <com.rey.material.widget.EditText
                     android:id="@+id/etemail"
+                    style="@style/Material.Widget.EditText.Light"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:inputType="textEmailAddress"
-                    style="@style/Material.Widget.EditText.Light"
                     android:drawableLeft="@drawable/email_icon_black"
-                    android:textStyle="bold"
                     android:drawablePadding="20dp"
+                    android:gravity="left"
+                    android:hint="@string/SiEmail"
+                    android:inputType="textEmailAddress"
                     android:singleLine="true"
-                    android:hint="Mobile No/Email"
-                    android:gravity="left"/>
+                    android:textStyle="bold" />
                 <!--
                 style="@style/Material.Widget.EditText.Light"-->
 
                 <com.rey.material.widget.EditText
                     android:id="@+id/etpassword"
+                    style="@style/Material.Widget.EditText.Light"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:inputType="textPassword"
-                    android:textStyle="bold"
-                    android:drawablePadding="20dp"
-                    android:singleLine="true"
-                    android:hint="Password"
                     android:drawableLeft="@drawable/password_icon_black"
-                    style="@style/Material.Widget.EditText.Light"
-                    android:gravity="left"/>
+                    android:drawablePadding="20dp"
+                    android:gravity="left"
+                    android:hint="@string/SiPassword"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textStyle="bold" />
 
                 <com.rey.material.widget.Button
                     android:id="@+id/btnlogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/SignUp"
                     android:textStyle="bold"
-                    android:text="LOGIN"
-                    app:v_styleId="@array/button_flat"/>
-
+                    app:v_styleId="@array/button_flat" />
 
 
             </LinearLayout>
-            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
